# study-copilot

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: generation_test.py  index_test.py  index_test2.py  search_test.py  test_prompt.py
src/studycopilot/: __init__.py  app.py  config.py
src/studycopilot/embeddings/: models.py  test_embedding.py
src/studycopilot/generation/: llm.py  prompt.py  schema.py  service.py
src/studycopilot/ingestion/: chunking.py  document.py  loaders.py  pipeline.py  schema.py
src/studycopilot/retrieval/: collections.py  documents.py  indexing.py  qdrant_client.py  schema.py  search.py
src/studycopilot/utils/: hash.py
