[project]
name = "study-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.14.0",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
